#253 - Broke Apart Modules
* Moved plugin files into idea-plugin.

* Created idea-plugin module.

* Attempt to fix build.

* Formatting.

* Added CONTRIBUTING.md file.