@@ -2,8 +2,16 @@ plugins {
     id 'org.jetbrains.intellij' version "0.4.18"
 }
 
-def pluginVersion = '0.89.0'
-version = pluginVersion + '-' + ideaVersion
+apply plugin: 'idea'
+
+def jdkVersion = 1.8
+
+idea {
+    project {
+        jdkName = jdkVersion
+        languageLevel = jdkVersion
+    }
+}
 
 patchPluginXml {
     changeNotes """
@@ -24,11 +32,28 @@ patchPluginXml {
 }
 
 allprojects {
-    apply plugin: 'java'
+    group 'com.reason'
+}
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'org.jetbrains.intellij'
+
+    sourceCompatibility = jdkVersion
+    targetCompatibility = jdkVersion
     tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        def powerMockVersion = '2.0.2'
+        testCompile 'org.mockito:mockito-core:3.3.3'
+        testCompile "org.powermock:powermock-module-junit4:${powerMockVersion}"
+        testCompile "org.powermock:powermock-api-mockito2:${powerMockVersion}"
+    }
 
     sourceSets {
         main {
@@ -40,24 +65,6 @@ allprojects {
         }
     }
 
-    apply plugin: 'org.jetbrains.intellij'
-    intellij {
-        pluginName 'reasonml-plugin-idea'
-        type 'IU'
-        version iuVersion
-        updateSinceUntilBuild = false
-        plugins = ['java',
-                   'JavaScriptLanguage',
-                   'com.jetbrains.hackathon.indices.viewer:1.3',
-                   'PsiViewer:' + psiVersion
-        ]
-    }
-
-    runIde {
-        systemProperty "refmtWidth", "120"
-        jvmArgs = ['--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED', '-Dcompiler.process.debug.port=5005', '-Xmx1024m']
-    }
-
     task testCompilation(type: Test, group: 'Verification', dependsOn: [classes, testClasses]) {
         testLogging {
             exceptionFormat = 'full'
@@ -65,31 +72,10 @@ allprojects {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile project('jps-plugin')
-    def powerMockVersion = "2.0.2"
-    testCompile 'org.mockito:mockito-core:3.3.3'
-    testCompile "org.powermock:powermock-module-junit4:${powerMockVersion}"
-    testCompile "org.powermock:powermock-api-mockito2:${powerMockVersion}"
-}
-
-apply plugin: 'idea'
-idea {
-    project {
-        jdkName = 1.8
-        languageLevel = 1.8
+project(':idea-plugin') {
+    dependencies {
+        compile project(':jps-plugin')
     }
-    module {
-        generatedSourceDirs += file('gen')
-    }
-}
-
-verifyPlugin {
-    pluginDirectory "resources"
 }
 
 /*
